--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
+{{template "header.html" dict "Title" "Photo Bingo"}}
 
-<head>
-    <title>Photo Bingo</title>
-</head>
+TODO
 
-<body>
-    TODO
-</body>
-
-</html>
+{{template "footer.html"}}
