--- a/templates/header.html
+++ b/templates/header.html
@@ -4,6 +4,22 @@
 <head>
     <title>{{.Title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <style>
+        td {
+            text-align: center;
+        }
+
+        /* color is a bit garish
+        td.incomplete {
+            background-color: red;
+        }
+
+        td.completed {
+            background-color: green;
+        }
+        */
+    </style>
 </head>
 
 <body>
